chore(docker): Mapeando o volume
Mapeando o volume local para o container.

--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,8 @@ services:
     restart: always
     build: .
     tty: true
+    volumes:
+      - ./:/app
     environment:
       EVERYWHERE_ENV: ${ENVIRONMENT:-development}
       DJANGO_SETTINGS_MODULE: ${DJANGO_SETTINGS_MODULE:-everywhere.settings}
