feat(admin): Customizando o admin com Unfold

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.11"
 django = "^5.0.2"
 dynaconf = "^3.2.4"
 psycopg2-binary = "^2.9.9"
+django-unfold = "^0.20.4"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.12.2"
