--- a/settings.toml
+++ b/settings.toml
@@ -10,6 +10,7 @@ DATABASES__default__NAME="./db.sqlite3"
 DEBUG=true
 
 INSTALLED_APPS = [
+    "unfold",
     "django.contrib.admin",
     "django.contrib.auth",
     "django.contrib.contenttypes",
