--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ django-unfold = "^0.20.4"
 djangorestframework = "^3.14.0"
 markdown = "^3.5.2"
 django-filter = "^23.5"
+drf-spectacular = "^0.27.1"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.12.2"
